attempt to fix CSS not loading properly on first load on IE

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -180,6 +180,7 @@
 }
 
 .cta {
+  opacity: 0;
   text-decoration: none;
   font-size: 18px;
   font-weight: 700;
@@ -195,6 +196,10 @@
   bottom: 25px;
   right: 25px;
   box-shadow: 3px 3px #ad6101;
+}
+
+.showCta {
+  opacity: 1;
 }
 
 .cta:hover,
